[package]
name = "try_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
# mio = { git = "https://github.com/second-state/wasi_mio.git", branch = "v0.8.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }

[dependencies]
env_logger = "0.11.2"
http = "1.1.0"
hyper = { version = "0.14" }
hyper-rustls = { version = "0.25", default-features = false, features = [
    "http1",
    "tls12",
    "logging",
    "ring",
    "webpki-tokio",
] }


rustls = { version = "0.22", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

tokio = { version = "1", features = ["full"] }
webpki-roots = "0.26.1"
